--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,10 +3,8 @@ name: Build
 on:
   pull_request:
     branches:
-      - master
+      - main
   push:
-    branches:
-      - master
 
 jobs:
   build:
