--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,10 +3,8 @@ name: Lint
 on:
   pull_request:
     branches:
-      - master
+      - main
   push:
-    branches:
-      - master
 
 jobs:
   lint:
