--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   },
   "lint-staged": {
     "*.ts": "eslint --cache --fix",
+    "*.{ts,tsx}": "craco test",
     "*.{ts,tsx,css,md}": "prettier --write"
   },
   "husky": {
