--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,19 +11,20 @@ jobs:
         node-version: ['14.x', '16.x']
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-
-    - name: install and build
-      run: yarn
-      env:
-        CI: true
-
-    - name: lint
-      run: yarn lint
-      env:
-        CI: true
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+        - uses: actions/cache@v2
+          with:
+            path: ~/.pnpm-store
+            key: ${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}
+      - name: install packages
+        run: |
+          pnpm install
+      - name: lint
+        run: yarn lint
+        env:
+          CI: true
