--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           path: ~/.pnpm-store
           key: ${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}
-      - uses: pnpm/actions-setup@v1.2.1
+      - uses: pnpm/action-setup@v1.2.1
         with:
           version: 5.14.1
       - name: install packages
