--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,9 @@
-name: Lint
+name: Test
 
 on: push
 
 jobs:
-  lint:
+  test:
     runs-on: ubuntu-latest
 
     strategy:
@@ -12,8 +12,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
       - uses: actions/cache@v2
@@ -26,7 +27,8 @@ jobs:
       - name: install packages
         run: |
           pnpm install
-      - name: lint
-        run: yarn lint
+      - name: test
+        run: |
+          pnpm test
         env:
           CI: true
